# pika

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  PLAN-QR-NPUB.md  README.md  flake.nix  justfile  mprocs.yaml  spec-v1.md  spec-v2.md  test1.hnmd  test3.hnmd
.github/: actionlint.yaml
android/: pika-release.jks.age
bots/: pi-bridge.py
cli/: Cargo.toml  README.md
cli/src/: fly_machines.rs  harness.rs  lib.rs  main.rs  mdk_util.rs  microvm_spawner.rs  relay_util.rs
cli/src/agent/: microvm.rs  mod.rs  provider.rs  session.rs
crates/marmotd/: Cargo.toml
crates/marmotd/src/: call_stt.rs  call_tts.rs  daemon.rs  main.rs
crates/mdk-core/: CHANGELOG.md  Cargo.toml
crates/mdk-core/docs/: encrypted-storage-plan.md
crates/mdk-core/examples/: group_inspection.rs  key_package_inspection.rs  mls_memory.rs  mls_sqlite.rs
crates/mdk-core/src/: callback.rs  constant.rs  epoch_snapshots.rs  error.rs  groups.rs  key_packages.rs  lib.rs  prelude.rs  test_util.rs  util.rs  welcomes.rs
crates/mdk-core/src/encrypted_media/: crypto.rs  manager.rs  metadata.rs  mod.rs  types.rs
crates/mdk-core/src/extension/: group_image.rs  mod.rs  types.rs
crates/mdk-core/src/media_processing/: metadata.rs  mod.rs  types.rs  validation.rs
crates/mdk-core/src/messages/: application.rs  commit.rs  create.rs  decryption.rs  error_handling.rs  mod.rs  process.rs  proposal.rs  validation.rs
crates/mdk-memory-storage/: CHANGELOG.md  Cargo.toml  README.md
crates/mdk-memory-storage/src/: groups.rs  lib.rs  messages.rs  snapshot.rs  welcomes.rs
crates/mdk-memory-storage/src/mls_storage/: mod.rs
crates/mdk-sqlite-storage/: CHANGELOG.md  Cargo.toml  README.md
crates/mdk-sqlite-storage/migrations/: V001__initial_schema.sql  V002__add_processed_at_to_messages.sql  V003__add_processed_at_first_sort_index.sql
crates/mdk-sqlite-storage/src/: db.rs  encryption.rs  error.rs  groups.rs  keyring.rs  lib.rs  messages.rs  migrations.rs  permissions.rs  test_utils.rs  validation.rs  welcomes.rs
crates/mdk-sqlite-storage/src/mls_storage/: mod.rs
crates/mdk-storage-traits/: CHANGELOG.md  Cargo.toml  README.md
crates/mdk-storage-traits/src/: error.rs  group_id.rs  lib.rs  mls_codec.rs  secret.rs  test_utils.rs
crates/mdk-storage-traits/src/groups/: error.rs  mod.rs  types.rs
crates/mdk-storage-traits/src/messages/: error.rs  mod.rs  types.rs
crates/mdk-storage-traits/src/welcomes/: error.rs  mod.rs  types.rs
crates/mdk-storage-traits/tests/: cross_storage.rs  memory_storage.rs  sqlite_storage.rs
crates/mdk-storage-traits/tests/shared/: group_tests.rs  message_tests.rs  mod.rs  welcome_tests.rs
crates/pika-agent-microvm/: Cargo.toml
crates/pika-agent-microvm/src/: lib.rs
crates/pika-desktop/: Cargo.toml  iced-view-pattern.md
crates/pika-desktop/src/: app_manager.rs  icons.rs  main.rs  theme.rs  video_shader.rs
crates/pika-desktop/src/design/: styles.rs
crates/pika-desktop/src/screen/: home.rs  login.rs
crates/pika-desktop/src/views/: avatar.rs  call_banner.rs  call_screen.rs  chat_rail.rs  conversation.rs  device_management.rs  empty_state.rs  group_info.rs  login.rs  message_bubble.rs  mod.rs  my_profile.rs  new_chat.rs  new_group_chat.rs  peer_profile.rs  toast.rs
crates/pika-marmot-runtime/: Cargo.toml
crates/pika-marmot-runtime/src/: lib.rs  media.rs  relay.rs
crates/pika-media/: Cargo.toml
crates/pika-media/examples/: duplex_test.rs  network_relay_test.rs  quic_connect_test.rs  relay_benchmark.rs
crates/pika-media/src/: codec_opus.rs  crypto.rs  directory.rs  jitter.rs  lib.rs  network.rs  session.rs  subscription.rs  tracks.rs
crates/pika-server/: .env.sample  Cargo.toml  Dockerfile  README.md
crates/pika-server/migrations/2023-10-16-222927_baseline/: down.sql  up.sql
crates/pika-server/src/: agent_control.rs  listener.rs  main.rs  routes.rs
crates/pika-server/src/agent_clients/: fly_machines.rs  microvm_spawner.rs  mod.rs  workers_agents.rs
crates/pika-server/src/models/: group_subscription.rs  mod.rs  schema.rs  subscription_info.rs
crates/pikachat-sidecar/: Cargo.toml
crates/pikachat-sidecar/src/: call_audio.rs  call_tts.rs  daemon.rs  lib.rs  mdk_state.rs  relay.rs
crates/rmp-cli/: Cargo.toml  README.md
crates/rmp-cli/src/: bindings.rs  cli.rs  config.rs  devices.rs  init.rs  run.rs  util.rs
docs/: agent-ci.md  android-parity-plan-feb-26.md  android-parity-report-feb-26.md  architecture.md  calling-ux.md  cloudflare-workers-agent-contract.md  fold-marmotd-into-pika-cli.md  hypernote-bot-guide.md  hypernote-integration-plan.md  pi-agent-rpc-parity.md  pika-cli-design.md  primal-ios-interop-lab.md  profile-screen-cleanup-plan.md  release.md  rmp-architecture-bible.md  rmp-ci.md  rmp.md  shared-cargo-target.md  state.md
infra/: justfile
ios/: Info.plist  project.yml
openclaw-marmot/: README.md
pikachat-openclaw/: README.md
prompts/: android-agent-device-manual-qa.md
rust/: Cargo.toml
rust/src/: actions.rs  bunker_signer.rs  core.rs  external_signer.rs  lib.rs  logging.rs  mdk_support.rs  route_projection.rs  state.rs  tls.rs  updates.rs
rust/src/core/: call_control.rs  call_runtime.rs  chat_media.rs  config.rs  interop.rs  mod.rs  profile.rs  profile_db.rs  push.rs  session.rs  storage.rs
rust/tests/: app_flows.rs  e2e_calls.rs  e2e_deployed_bot_call.rs  e2e_local_marmotd_call.rs  e2e_local_pikachat_daemon_call.rs  e2e_local_relay.rs  e2e_messaging.rs  e2e_public_relays.rs  e2e_real_moq_relay.rs  perf_reliable_moq.rs  reliable_moq_profile.rs
rust/tests/support/: helpers.rs  infra.rs  mod.rs  reliable_moq.rs
scripts/: agent-brief  build-macos-release  bump-pikachat.sh  decrypt-keystore  demo-agent-control-plane-local.sh  demo-agent-microvm.sh  encrypt-zapstore-signing  init-release-secrets  post-release-announcement  read-keystore-password  read-zapstore-sign-with  release-age-recipients  reliable-moq-report  version-read  zapstore-publish
secrets/: android-signing.env.age  zapstore-signing.env.age
todos/: agent-cli.md  agent-provider-unification-first-spec.md  android-amber-support-plan.md  audio-calls-status.md  (+26 more)
(+201 files in other folders)
