[package]
name = "pikachat"
version = "0.5.3"
edition = "2024"

[[bin]]
name = "pikachat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr-blossom = "0.44.0"
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
pika-agent-control-plane = { path = "../crates/pika-agent-control-plane" }
pikachat-sidecar = { path = "../crates/pikachat-sidecar" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
