[package]
name = "pika_core"
version = "0.1.0"
edition = "2021"

[lib]
# Keep rlib so Rust integration tests can `use pika_core::...`.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
flume = "0.11"
hex = "0.4"
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }
# NOTE: CI-compatible dependency pinning. Do not use local path deps here.
# If you need to develop against a local MDK checkout, use a gitignored
# `.cargo/config.toml` with a `[patch."https://github.com/marmot-protocol/mdk"]`
# section instead.
mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "1ad73229ab712018c078d5295e11ec38e10d6a24" }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "1ad73229ab712018c078d5295e11ec38e10d6a24" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "1ad73229ab712018c078d5295e11ec38e10d6a24" }
keyring-core = "0.7"
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
rand = "0.8"
serde_json = "1"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = "0.31.0"

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
tokio-tungstenite = "0.27"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5.0"
jni = "0.21"
ndk-context = "0.1.1"

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2.2", features = ["protected"] }
