[package]
name = "pika_core"
version = "0.1.0"
edition = "2021"

[lib]
# Keep rlib so Rust integration tests can `use pika_core::...`.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
flume = "0.11"
hex = "0.4"
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }
# NOTE: CI-compatible dependency pinning. Do not use local path deps here.
# If you need to develop against a local MDK checkout, use a gitignored
# `.cargo/config.toml` with a `[patch."https://github.com/marmot-protocol/mdk"]`
# section instead.
# Includes upstream fix for https://github.com/marmot-protocol/mdk/issues/168
# (key packages no longer forced to be NIP-70 protected; option exists to enable it).
mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "d6777f73a35028bbfe638949a4963ecb9f3f4117", features = ["mip04"] }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "d6777f73a35028bbfe638949a4963ecb9f3f4117" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "d6777f73a35028bbfe638949a4963ecb9f3f4117" }
keyring-core = "0.7"
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
pika-media = { path = "../crates/pika-media", features = ["network"] }
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uniffi = "0.31.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
tokio-tungstenite = "0.27"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5.0"
jni = "0.21"
ndk-context = "0.1.1"
paranoid-android = "0.2"
cpal = "0.16"

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2.2", features = ["protected"] }
cpal = "0.16"
tracing-oslog = "0.3"
