[package]
name = "pika_core"
version = "0.1.0"
edition = "2021"

[lib]
# Keep rlib so Rust integration tests can `use pika_core::...`.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
flume = "0.11"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
# NOTE: CI-compatible dependency pinning. Do not use local path deps here.
# If you need to develop against a local MDK checkout, use a gitignored
# `.cargo/config.toml` with a `[patch."https://github.com/marmot-protocol/mdk"]`
# section instead.
# MDK is pinned at the workspace root to avoid version skew between workspace members.
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
keyring-core = "0.7"
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
nostr-blossom = "0.44.0"
pika-media = { path = "../crates/pika-media", features = ["network"] }
pika-tls = { path = "../crates/pika-tls" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
rusqlite = "0.32"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uniffi = "0.31.0"
uuid = { version = "1", features = ["v4"] }
cpal = "0.16"

[target.'cfg(not(target_os = "android"))'.dependencies]
# SQLCipher without vendored OpenSSL. Apple targets use CommonCrypto; desktop targets can use
# system roots/crypto. This keeps iOS builds free of OpenSSL toolchain issues.
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android NDK doesn't ship OpenSSL headers/libs, but SQLCipher's default crypto backend is OpenSSL.
# Vendor OpenSSL for Android builds so `bundled-sqlcipher` compiles.
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }
android-native-keyring-store = "0.5.0"
jni = "0.21"
ndk-context = "0.1.1"
paranoid-android = "0.2"

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
tokio-tungstenite = "0.27"

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2.2", features = ["protected"] }
tracing-oslog = "0.3"
