[package]
name = "mdk-memory-storage"
version = "0.5.1"
edition = "2024"
description = "In-memory database for MDK that implements the MdkStorageProvider trait"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.90.0"
keywords = ["nostr", "mls", "openmls", "memory"]

[dependencies]
lru.workspace = true
mdk-storage-traits.workspace = true
nostr = { workspace = true, features = ["std"] }
openmls.workspace = true
openmls_traits.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["std", "derive"] }
serde_json.workspace = true

[dev-dependencies]
mdk-storage-traits = { workspace = true, features = ["test-utils"] }
