[package]
name = "mdk-sqlite-storage"
version = "0.5.1"
edition = "2024"
description = "SQLite database for MDK that implements the MdkStorageProvider trait"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.90.0"
keywords = ["nostr", "mls", "openmls", "sqlite"]

[features]
default = []

[dependencies]
getrandom.workspace = true
hex = { workspace = true, features = ["std"] }
keyring-core.workspace = true
mdk-storage-traits.workspace = true
nostr = { workspace = true, features = ["std"] }
openmls.workspace = true
openmls_traits.workspace = true
refinery = { workspace = true, features = ["rusqlite"] }
rusqlite = { workspace = true, features = ["bundled-sqlcipher"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
mdk-storage-traits = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
