[package]
name = "mdk-storage-traits"
version = "0.5.1"
edition = "2024"
description = "Storage abstraction for MDK that wraps OpenMLS storage backends"
authors = ["Jeff Gardner <j@jeffg.me>", "Yuki Kishimoto <yukikishimoto@protonmail.com>", "MDK Developers"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version = "1.90.0"
keywords = ["nostr", "mls", "openmls"]

[features]
default = []
# Enable test utils module
test-utils = []

[dependencies]
nostr = { workspace = true, features = ["std"] }
openmls.workspace = true
openmls_traits.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true
zeroize = { workspace = true, features = ["zeroize_derive"] }

[dev-dependencies]
mdk-sqlite-storage.workspace = true
mdk-memory-storage.workspace = true
