[package]
name = "pika-agent-microvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
nostr-sdk = "0.44"
pika-agent-control-plane = { path = "../pika-agent-control-plane" }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pika-test-utils = { path = "../pika-test-utils" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
