[package]
name = "pika-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
flume = "0.11"
iced = { version = "0.14", features = ["tokio", "image", "wgpu"] }
image = "0.24"
nokhwa = { version = "0.10", features = ["input-native"] }
openh264 = "0.6"
pika_core = { path = "../../rust" }
pika-media = { path = "../pika-media" }
rfd = "0.15"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
