[package]
name = "pika-marmot-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
hex = "0.4"
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr-sdk = "0.44.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
