[package]
name = "pika-media"
version = "0.1.0"
edition = "2021"

[features]
default = []
network = ["moq-native", "moq-lite", "tokio", "bytes", "tracing", "url"]

[dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Network transport (behind "network" feature so tests stay light)
moq-native = { git = "https://github.com/kixelated/moq", rev = "5ad5c064875d11d22f31779537fc0e541d792717", default-features = false, features = ["quinn"], optional = true }
moq-lite = { git = "https://github.com/kixelated/moq", rev = "5ad5c064875d11d22f31779537fc0e541d792717", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }
bytes = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
url = { version = "2", optional = true }
