[package]
name = "pika-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pika-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6.16"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.28"
nostr = "0.44"
nostr-sdk = { version = "0.44", features = ["nip59"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
a2 = "0.10"
base64 = "0.22"
fcm-rs = "0.2"
