[package]
name = "rmp-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rmp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tempfile = "3"
walkdir = "2"
